--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tmfreact",
   "version": "1.0.0",
   "description": "first react app",
-  "main": "index.js",
   "scripts": {
     "test": "jest"
   },
@@ -24,5 +23,10 @@
   "homepage": "https://github.com/Lohith-Pavan/TMFReact#readme",
   "devDependencies": {
     "parcel": "^2.14.4"
+  },
+  "dependencies": {
+    "bundler": "^0.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
