--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "bundler": "^0.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
-  }
+  },
+  "browserslist":[
+       "last 10 chrome versions",
+       "last 2 firefox version"
+  ]
 }
